--- a/less/workspace/miller-columns.less
+++ b/less/workspace/miller-columns.less
@@ -72,12 +72,14 @@
       z-index: 1;
       border-bottom: 0.1rem solid #ddd;
 
+      background: white;
+
       &:hover {
-        background: rgba(0, 0, 0, 0.2);
+        background: #eee;
       }
 
       &.selected {
-        background: rgba(0, 0, 0, 0.1);
+        background: #ddd;
         z-index: 2;
       }
 
